Add support for multiple ceph clusters

--- a/ceph-client-setup/ceph-client-deploy.yml
+++ b/ceph-client-setup/ceph-client-deploy.yml
@@ -22,7 +22,7 @@
       when: ansible_os_family == 'RedHat'
 
     - name: Copy ceph configuration file
-      template: src=ceph.conf.j2 dest=/etc/ceph/ceph.conf
+      template: src=ceph.conf.j2 dest=/etc/ceph/{{ cluster_name }}.conf
 
 - hosts: GLA-API
   sudo: yes
@@ -56,7 +56,12 @@
   tasks:
 
     - name: Copy cinder keyring file
-      template: src=ceph.keyring.j2 dest=/etc/ceph/ceph.{{ item }}.keyring owner=cinder group=cinder mode=0640
+      template:
+        src: ceph.keyring.j2
+        dest: /etc/ceph/{{ cluster_name }}.{{ item }}{% if cluster_name != "ceph" %}-{{ cluster_name }}{% endif %}.keyring
+        owner: cinder
+        group: cinder
+        mode: 0640
       with_items:
         - client.cinder
 
@@ -68,7 +73,12 @@
   tasks:
 
     - name: Copy cinder-backup keyring file
-      template: src=ceph.keyring.j2 dest=/etc/ceph/ceph.{{ item }}.keyring owner=cinder group=cinder mode=0640
+      template:
+        src: ceph.keyring.j2
+        dest: /etc/ceph/{{ cluster_name }}.{{ item }}{% if cluster_name != "ceph" %}-{{ cluster_name }}{% endif %}.keyring
+        owner: cinder
+        group: cinder
+        mode: 0640
       with_items:
         - client.cinder-backup
 
@@ -79,7 +89,12 @@
   tasks:
 
     - name: Copy cinder keyring file to compute nodes
-      template: src=ceph.keyring.j2 dest=/etc/ceph/ceph.{{ item }}.keyring owner=nova group=nova mode=0640
+      template:
+        src: ceph.keyring.j2
+        dest: /etc/ceph/{{ cluster_name }}.{{ item }}{% if cluster_name != "ceph" %}-{{ cluster_name }}{% endif %}.keyring
+        owner: nova
+        group: nova
+        mode: 0640
       with_items:
         - client.cinder
 
@@ -90,7 +105,12 @@
   tasks:
 
     - name: Copy glance keyring file
-      template: src=ceph.keyring.j2 dest=/etc/ceph/ceph.{{ item }}.keyring owner=glance group=glance mode=0640
+      template:
+        src: ceph.keyring.j2
+        dest: /etc/ceph/{{ cluster_name }}.{{ item }}{% if cluster_name != "ceph" %}-{{ cluster_name }}{% endif %}.keyring
+        owner: glance
+        group: glance
+        mode: 0640
       with_items:
         - client.glance
 
